src/worker/snapshots/crew__worker__prompt__tests__comment_marker_in_code_new.snap
---
source: src/worker/prompt.rs
expression: new
---
You are working on issue MT-1: t

If `$(git rev-parse --git-dir)/crew/checkpoint.md` exists, read it before anything else and do not repeat what it covers. Update it after each commit. It holds the acceptance criteria with the status of each, the last commit that passed the commit-gate commands, and the next action. The path is the worktree's git directory, which git does not track, so the file cannot be committed.

Description:
Before.

```html
<!-- fenced -->


kept blank above
```

Inline `<!-- inline -->` and ``<!-- ticks -->``.


Investigate and resolve this issue in the current working directory, committing your changes as you go. When you have fully completed the work, simply stop.

If you have made real progress but need another turn to finish, end your final message with a line reading exactly:
CREW_OUTCOME: continue: <one-sentence reason>

If you are stuck and need a human to unblock you, end your final message with:
CREW_OUTCOME: blocked: <one-sentence reason>
